--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bower": "0.6.x",
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -14,5 +15,8 @@
     "morgan": "~1.5.3",
     "serve-favicon": "~2.2.1",
     "stylus": "0.42.3"
+  },
+  "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
