--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+        "postinstall": "./node_modules/bower/bin/bower install"
   },
   "dependencies": {
     "bower": "0.6.x",
@@ -15,8 +16,5 @@
     "morgan": "~1.5.3",
     "serve-favicon": "~2.2.1",
     "stylus": "0.42.3"
-  },
-  "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
