--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "morgan": "~1.5.3",
     "serve-favicon": "~2.2.1",
     "stylus": "0.42.3"
+  },
+   "engines": {
+    "node": "0.12.x"
   }
 }
