--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-        "postinstall": "./node_modules/bower/bin/bower install"
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "dependencies": {
-    "bower": "2.10.x",
     "body-parser": "~1.12.4",
+    "bower": "^1.4.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.1",
@@ -17,7 +17,7 @@
     "serve-favicon": "~2.2.1",
     "stylus": "0.42.3"
   },
-   "engines": {
+  "engines": {
     "node": "0.12.x"
   }
 }
