--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,9 @@
   ],
   "dependencies": {
     "d3": "~3.5.5",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "strapdown": "*",
+    "katex": "~0.4.3",
+    "nvd3": "~1.8.1"
   }
 }
