--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "jquery": "~2.1.4",
     "strapdown": "*",
     "katex": "~0.4.3",
-    "nvd3": "~1.8.1"
+    "nvd3": "~1.8.1",
+    "reveal.js": "~3.1.0"
   }
 }
