--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "strapdown": "*",
     "katex": "~0.4.3",
     "nvd3": "~1.8.1",
-    "reveal.js": "~3.1.0"
+    "reveal.js": "~3.1.0",
+    "geoJSON": "~1.0.0",
+    "jquery.easing": "~1.3.1"
   }
 }
